# painlessMesh

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .instructions.md  .npmignore  .npmrc  .prettierignore  ARDUINO_COMPLIANCE_SUMMARY.md  ARDUINO_IDE_VERSION_FIX_SUMMARY.md  ASYNCCLIENT_CLEANUP_FIX.md  BRIDGE_ARCHITECTURE_IMPLEMENTATION.md  BRIDGE_DISCOVERY_FIX.md  BRIDGE_FAILOVER_RETRY_FIX.md  BRIDGE_FAILOVER_SENDTOINTERNET_FIX.md  BRIDGE_HEALTH_MONITORING_IMPLEMENTATION.md  BRIDGE_PROMOTION_CRASH_FIX_SUMMARY.md  BRIDGE_TO_INTERNET.md  BUILD_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_BROADCAST_ANALYSIS.md  CONTRIBUTING.md  CUSTOM_AGENT_ANALYSIS.md  DIAGNOSTICS_API_IMPLEMENTATION.md  DOCKER_TESTING.md  DOCSIFY_ADVANTAGES.md  DOCUMENTATION_INDEX.md  Dockerfile  FIX_SUMMARY_ABORT_TIMING.md  FIX_SUMMARY_BRIDGE_PROMOTION_CRASH.md  GATEWAY_CONNECTION_TIMEOUT_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_137_RESOLUTION.md  ISSUE_161_ANALYSIS.md  ISSUE_161_RESPONSE.md  ISSUE_231_FIX_SUMMARY.md  (+90 more)
.github/: AGENTS_INDEX.md  ALTERIOM_SETUP.md  ARDUINO_LIBRARY_REGISTRY_SUBMISSION.md  COPILOT_AGENTS_GUIDE.md  COPILOT_AGENT_SETUP.md  DOCUMENTATION.md  ISSUE_TEMPLATE_V2_ARCHITECTURE.md  README-DEVELOPMENT.md  copilot-agents.json  copilot-instructions.md  copilot-quick-reference.md  copilot-troubleshooting.md  dependabot.yml  mcp-painlessmesh.js  mcp-server.json  package-lock.json  package.json
.github/agents/: AGENT_IMPROVEMENTS.md  MARKETPLACE_SETUP.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  alteriom-ai-agent.md  (+10 more)
docs/: API_DESIGN_GUIDELINES.md  ARDUINO_LIBRARY_MANAGER_SUBMISSION.md  BOOLEAN_NAMING_CONVENTION.md  BRIDGE_FAILOVER.md  BRIDGE_HEALTH_MONITORING.md  BRIDGE_INITIALIZATION_FALLBACK.md  CHANNEL_SYNCHRONIZATION.md  CREATE_MISSING_RELEASES.md  FAQ_VERSION_NUMBERS.md  IMPLEMENTATION_PLAN_MESH_TOPOLOGY.md  MESH_TOPOLOGY_GUIDE.md  MESH_TOPOLOGY_PROGRESS.md  MQTT_BRIDGE_COMMANDS.md  MQTT_BRIDGE_IMPLEMENTATION_SUMMARY.md  MQTT_COMMAND_SCHEMA_PROPOSAL.md  MQTT_SCHEMA_COMPLIANCE.md  MQTT_SCHEMA_PROPOSALS.md  MQTT_SCHEMA_REVIEW.md  OTA_COMMANDS_REFERENCE.md  PHASE1_GUIDE.md  PHASE2_GUIDE.md  QUICK_REFERENCE_VERSIONING.md  README.md  RELEASE_AGENT_SUMMARY.md  SCHEMA_VALIDATION_CHECKLIST.md  SIMULATOR_TESTING.md  VERSION_MANAGEMENT.md  multi-bridge-setup.md  platformio-publishing.md  platformio-setup-summary.md  v1.7.7_MQTT_IMPROVEMENTS.md
docs-website/: docusaurus.config.ts
docsify-site/: DOCUMENTATION_MIGRATION_PLAN.md  README.md  _navbar.md  _sidebar.md  index.html
doxygen/: Doxyfile
examples/basic/test/simulator/: CMakeLists.txt  README.md
examples/basic/test/simulator/firmware/: basic_firmware.hpp
examples/basic/test/simulator/scenarios/: basic_mesh_test.yaml
examples/sendToInternet/: .gitignore  CMakeLists.txt  PC_NODE_README.md  README.md  build.sh  mock_server_test.ino  pc_mesh_node.cpp  platformio.ini  sendToInternet.ino
scripts/: README.md  bump-version.sh  create-arduino-zip.sh  create-missing-releases.sh  release-agent.sh  test-arduino-library.sh  validate-arduino-compliance.sh  validate-release.sh  validate_ci_setup.py  validate_library_structure.py
src/: AlteriomPainlessMesh.h  library.json  painlessMesh.h  painlessMeshSTA.cpp  painlessMeshSTA.h  painlessTaskOptions.h
test/: README.md
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+303 files in other folders)
